# neural-net-cpp

./: .gitignore  CMakeLists.txt  README.md  train_mnist
examples/: train_mnist.cpp
include/nn/: activations.hpp  dense.hpp  layer.hpp  loss.hpp  mnist.hpp  model.hpp  utils.hpp
src/: activations.cpp  dense.cpp  mnist.cpp  model.cpp
